...

    val visualConnectionColor = MaterialTheme.colorScheme.primary.copy(alpha = .72f)
    GoogleMap(
        modifier = modifier
            .fillMaxWidth()
            .height(MAP_HEIGHT)
            .testTag("connected-route-geographic-preview")
            .semantics(mergeDescendants = true) {
                contentDescription = accessibilityDescription
            },
        googleMapOptionsFactory = { GoogleMapOptions().liteMode(true) },
        cameraPositionState = cameraPositionState,
        properties = MapProperties(isMyLocationEnabled = false),
...
